src/objects/TimeRecordControll__c.object
<CustomObject>
    <fields>
        <fullName>GeolocationOnCheckEndWorkingHours__c</fullName>
        <label>Ubicación al comprobar fin de jornada</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LinkedEmployee__c</fullName>
        <label>Empleado vinculado</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Registros de control</relationshipLabel>
        <relationshipName>TimeControlRecords</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ModifiedByTeamLeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modificado por Team Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MustDoOvertime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permiso para realizar horas extra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordDate__c</fullName>
        <label>Fecha de registro</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SelectedEndWorkingHours__c</fullName>
        <label>Hora marcada fin de trabajo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StarWorkingTime__c</fullName>
        <label>Hora de inicio de trabajo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartWorkingHoursGeolocation__c</fullName>
        <label>Ubicación al iniciar jornada</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Estado del registro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aceptado</fullName>
                </value>
                <value>
                    <fullName>Contencioso</fullName>
                </value>
                <value>
                    <fullName>Resuelto Inspección</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeEndWorkingHoursControl__c</fullName>
        <formula>SelectedEndWorkingHours__c +(0.5/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hora de comprobación fin de trabajo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WIReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revisado por Inspección de Trabajo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTeleworking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teletrabajo</label>
        <type>Checkbox</type>
    </fields>
    <label>Registro de control</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros de control</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OnlyTeamLeaderCanModifyMustDoOverTime</fullName>
        <active>true</active>
        <errorConditionFormula>LinkedEmployee__r.isTeamLeader__c = false &amp;&amp;  ISCHANGED( MustDoOvertime__c )</errorConditionFormula>
        <errorDisplayField>MustDoOvertime__c</errorDisplayField>
        <errorMessage>Solo el Team Leader puede dar permiso para realizar horas extra</errorMessage>
    </validationRules>
</CustomObject>